<resources>
    <string name="app_name">PracticalExam</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="button1">button 1</string>
    <string name="button2">button 2</string>
    <string name="button3">button 3</string>
    <string name="button4">Logout</string>
    <string name="integer_place">Setting -</string>
</resources>
