<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nyc.c4q.josegonzalez.practicalexam.ProfileActivity">
    <ImageView
        android:layout_width="@dimen/profile_image_width"
        android:layout_height="@dimen/profile_image_height"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profileuser"
        android:layout_marginBottom="@dimen/empty_space"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageButton
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:scaleType="fitXY"
            android:src="@drawable/heart"
            android:id="@+id/button1"
            android:layout_margin="@dimen/profile_margins"
            android:onClick="heart"/>
        <ImageButton
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:scaleType="fitXY"
            android:id="@+id/button2"
            android:src="@drawable/mail"
            android:layout_margin="@dimen/profile_margins"
            android:onClick="mail"/>
        <ImageButton
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:scaleType="fitXY"
            android:id="@+id/button3"
            android:src="@drawable/contacts"
            android:layout_margin="@dimen/profile_margins"
            android:onClick="contacts"/>
        <ImageButton
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:scaleType="fitXY"
            android:id="@+id/button4"
            android:src="@drawable/logout"
            android:layout_margin="@dimen/profile_margins"
            android:onClick="logout"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:id="@+id/text1"
            android:text="@string/button1"
            android:layout_margin="@dimen/profile_margins"/>
        <TextView
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:id="@+id/text2"
            android:text="@string/button2"
            android:layout_margin="@dimen/profile_margins"/>
        <TextView
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:id="@+id/text3"
            android:text="@string/button3"
            android:layout_margin="@dimen/profile_margins"/>
        <TextView
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:id="@+id/text4"
            android:text="@string/button4"
            android:layout_margin="@dimen/profile_margins"/>
    </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/top_image"
            android:src="@drawable/profileuser"/>

        <ListView
            android:id="@+id/list_view_drawer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/image_view"
            android:choiceMode="singleChoice"
            android:background="@color/list_background"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
